--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.0",
+        "dotenv": "^16.0.1",
+        "ejs": "^3.1.8",
         "express": "^4.18.1",
         "express-handlebars": "^6.0.6",
+        "multiparty": "^4.2.3",
         "nodemailer": "^6.7.5",
         "nodemon": "^2.0.16"
     }
