--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
     "name": "nodejs-emailing",
     "version": "1.0.0",
     "description": "Nodejs application for sending emails",
-    "main": "app.js",
+    "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js"
+        "start": "ts-node index.ts",
+        "dev": "nodemon index.ts"
     },
     "author": "Priyanshi",
     "license": "ISC",
     "dependencies": {
+        "@types/ejs": "^3.1.1",
+        "@types/express": "^4.17.13",
+        "@types/nodemailer": "^6.4.4",
         "body-parser": "^1.20.0",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
@@ -18,6 +21,8 @@
         "express-handlebars": "^6.0.6",
         "multiparty": "^4.2.3",
         "nodemailer": "^6.7.5",
-        "nodemon": "^2.0.16"
+        "nodemon": "^2.0.16",
+        "ts-node": "^10.8.1",
+        "typescript": "^4.7.3"
     }
 }
